--- a/package.json
+++ b/package.json
@@ -1,53 +1,159 @@
 {
+  
   "name": "blockchain_id_system",
+  
   "version": "0.1.0",
+  
   "private": true,
+  
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+  
+    
+  "dev": "next dev",
+  
+    
+  "build": "next build",
+  
+    
+  "start": "next start",
+  
+    
+  "lint": "next lint"
+  
   },
+  
   "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
-    "@pinata/sdk": "^2.1.0",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@thirdweb-dev/react": "^4.4.5",
-    "@thirdweb-dev/sdk": "^4.0.33",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "date-fns": "^3.2.0",
-    "ethers": "^5.7.2",
-    "filepond": "^4.30.6",
-    "filepond-plugin-image-exif-orientation": "^1.0.11",
-    "filepond-plugin-image-preview": "^4.6.12",
-    "fs": "^0.0.1-security",
-    "lucide-react": "^0.312.0",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-day-picker": "^8.10.0",
-    "react-dom": "^18",
-    "react-filepond": "^7.1.2",
-    "react-hook-form": "^7.49.3",
-    "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7",
-    "thirdweb": "^0.13.38",
-    "zod": "^3.22.4"
+  
+    
+  "@hookform/resolvers": "^3.3.4",
+  
+    
+  "@pinata/sdk": "^2.1.0",
+  
+    
+  "@prisma/client": "^5.10.2",
+  
+    
+  "@radix-ui/react-avatar": "^1.0.4",
+  
+    
+  "@radix-ui/react-label": "^2.0.2",
+  
+    
+  "@radix-ui/react-popover": "^1.0.7",
+  
+    
+  "@radix-ui/react-select": "^2.0.0",
+  
+    
+  "@radix-ui/react-slot": "^1.0.2",
+  
+    
+  "@radix-ui/react-toast": "^1.1.5",
+  
+    
+  "@thirdweb-dev/react": "^4.4.5",
+  
+    
+  "@thirdweb-dev/sdk": "^4.0.33",
+  
+    
+  "class-variance-authority": "^0.7.0",
+  
+    
+  "clsx": "^2.1.0",
+  
+    
+  "date-fns": "^3.2.0",
+  
+    
+  "ethers": "^5.7.2",
+  
+    
+  "filepond": "^4.30.6",
+  
+    
+  "fs": "^0.0.1-security",
+  
+    
+  "lucide-react": "^0.312.0",
+  
+    
+  "next": "14.1.0",
+  
+    
+  "react": "^18",
+  
+    
+  "react-day-picker": "^8.10.0",
+  
+    
+  "react-dom": "^18",
+  
+    
+  "react-filepond": "^7.1.2",
+  
+    
+  "react-hook-form": "^7.49.3",
+  
+    
+  "tailwind-merge": "^2.2.0",
+  
+    
+  "tailwindcss-animate": "^1.0.7",
+  
+    
+  "thirdweb": "^0.13.38",
+  
+    
+  "zod": "^3.22.4"
+  
   },
+  
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  }
+  
+    
+  "@types/node": "^20.11.20",
+  
+    
+  "@types/react": "^18",
+  
+    
+  "@types/react-dom": "^18",
+  
+    
+  "autoprefixer": "^10.0.1",
+  
+    
+  "eslint": "^8",
+  
+    
+  "eslint-config-next": "14.1.0",
+  
+    
+  "postcss": "^8",
+  
+    
+  "prisma": "^5.10.2",
+  
+    
+  "tailwindcss": "^3.3.0",
+  
+    
+  "ts-node": "^10.9.2",
+  
+    
+  "typescript": "^5.3.3"
+  
+  },
+  
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  
+  "main": "postcss.config.js",
+  
+  "keywords": [],
+  
+  "author": "",
+  
+  "license": "ISC"
 }
