--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
   "@prisma/client": "^5.10.2",
   
     
+  "@radix-ui/react-alert-dialog": "^1.0.5",
+  
+    
   "@radix-ui/react-avatar": "^1.0.4",
   
     
@@ -76,10 +79,19 @@
   "fs": "^0.0.1-security",
   
     
+  "html5-qrcode": "^2.3.8",
+  
+    
   "lucide-react": "^0.312.0",
   
     
   "next": "14.1.0",
+  
+    
+  "next-qrcode": "^2.5.1",
+  
+    
+  "qrcode": "^1.5.3",
   
     
   "react": "^18",
@@ -114,6 +126,9 @@
   
     
   "@types/node": "^20.11.20",
+  
+    
+  "@types/qrcode": "^1.5.5",
   
     
   "@types/react": "^18",
