--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
   "@radix-ui/react-avatar": "^1.0.4",
   
     
+  "@radix-ui/react-dropdown-menu": "^2.0.6",
+  
+    
   "@radix-ui/react-label": "^2.0.2",
   
     
@@ -58,10 +61,16 @@
   "@react-pdf/renderer": "^3.4.2",
   
     
+  "@tanstack/react-table": "^8.16.0",
+  
+    
   "@thirdweb-dev/react": "^4.4.5",
   
     
   "@thirdweb-dev/sdk": "^4.0.33",
+  
+    
+  "antd": "^5.16.5",
   
     
   "class-variance-authority": "^0.7.0",
@@ -82,25 +91,10 @@
   "fs": "^0.0.1-security",
   
     
-  "html-pdf": "^3.0.1",
-  
-    
-  "html5-qrcode": "^2.3.8",
-  
-    
-  "jspdf": "^2.5.1",
-  
-    
   "lucide-react": "^0.312.0",
   
     
   "next": "14.1.0",
-  
-    
-  "next-qrcode": "^2.5.1",
-  
-    
-  "qrcode": "^1.5.3",
   
     
   "react": "^18",
@@ -116,6 +110,9 @@
   
     
   "react-hook-form": "^7.49.3",
+  
+    
+  "react-table": "^7.8.0",
   
     
   "tailwind-merge": "^2.2.0",
@@ -134,13 +131,7 @@
   "devDependencies": {
   
     
-  "@types/html-pdf": "^3.0.3",
-  
-    
   "@types/node": "^20.11.20",
-  
-    
-  "@types/qrcode": "^1.5.5",
   
     
   "@types/react": "^18",
